Добавление функционала лайков
